<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center|center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#18001C"
        android:textSize="18sp"
        android:textStyle="bold"
        custom:layout_constraintBottom_toTopOf="@+id/SudokuBoard"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.501"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.0" />

    <com.shreyas.sudokusolver.SudokuBoard
        android:id="@+id/SudokuBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        custom:boardColor="#000000"
        custom:cellFillColor="#6600DDFF"
        custom:cellsHighlightColor="#2600DDFF"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:letterColor="#000000"
        custom:letterColorSolve="#00FF00">

    </com.shreyas.sudokusolver.SudokuBoard>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/SudokuBoard">

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="numberClick"
            android:padding="0dp"
            android:text="@string/One"
            android:textColor="#000000"
            android:textSize="24sp"
            custom:backgroundTint="#8FB6D5" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="numberClick"
            android:padding="0dp"
            android:text="@string/Two"
            android:textColor="#000000"
            android:textSize="24sp"
            custom:backgroundTint="#8FB6D5" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="numberClick"
            android:padding="0dp"
            android:text="@string/Three"
            android:textColor="#000000"
            android:textSize="24sp"
            custom:backgroundTint="#8FB6D5" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="numberClick"
            android:padding="0dp"
            android:text="@string/Four"
            android:textColor="#000000"
            android:textSize="24sp"
            custom:backgroundTint="#8FB6D5" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="numberClick"
            android:padding="0dp"
            android:text="@string/Five"
            android:textColor="#000000"
            android:textSize="24sp"
            custom:backgroundTint="#8FB6D5" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="numberClick"
            android:padding="0dp"
            android:text="@string/Six"
            android:textColor="#000000"
            android:textSize="24sp"
            custom:backgroundTint="#8FB6D5" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="numberClick"
            android:padding="0dp"
            android:text="@string/Seven"
            android:textColor="#000000"
            android:textSize="24sp"
            custom:backgroundTint="#8FB6D5" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="numberClick"
            android:padding="0dp"
            android:text="@string/Eight"
            android:textColor="#000000"
            android:textSize="24sp"
            custom:backgroundTint="#8FB6D5" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="numberClick"
            android:padding="0dp"
            android:text="@string/Nine"
            android:textColor="#000000"
            android:textSize="24sp"
            custom:backgroundTint="#8FB6D5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.509"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/btnclear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:onClick="btnClear"
            android:text="@string/clear"
            custom:backgroundTint="#021687" />

        <Button
            android:id="@+id/btncheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:onClick="btnCheck"
            android:text="@string/check"
            custom:backgroundTint="#F10606" />

        <Button
            android:id="@+id/btnsolve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:onClick="btnSolve"
            android:text="@string/solve"
            custom:backgroundTint="#04DD0C" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/tvrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FD0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvcol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FD0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FD0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvvalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#1FD326"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>